fixed image loading position on mobile

--- a/shuttle-client/src/app/user/user.component.css
+++ b/shuttle-client/src/app/user/user.component.css
@@ -9,8 +9,8 @@ h1
   position: relative;
   margin-left: auto;
   margin-right: auto;
-  width: 900px;
-  height: 600px;
+  width: 500px;
+  height: 694px;
 }
 
 .dot {
